# eddy

./: .gitignore  .gitmodules  CMakeLists.txt  build_program_json.sh  eddy.c  edy.c  example.json  example_1.json  example_2.json  example_program.json  example_schematic.json  main.c  move_objects.eds  product_of_sums.eds  program.c  source ir disassemby.txt  table.asm
.github/workflows/: cmake.yml
examples/description/: mat2_mul_mat2.txt  mat2_transpose.txt  mat3_mul_mat3.txt  mat3_transpose.txt  mat4_mul_mat4.txt  mat4_transpose.txt
examples/kernels/concatenate/: 3_to_1.json  3x3_to_1.json  4_to_1.json  9_to_1.json
examples/kernels/contingency/: if.json
examples/kernels/conversion/: vec4_to_vec2.json
examples/kernels/matrix/: mat3_transpose.json  mat4_transpose.json
examples/kernels/splice/: 1_to_2.json  1_to_2x2_col_row.json  1_to_2x2_row_col.json  1_to_3.json  1_to_3x3_row_col.json  1_to_4.json  1_to_4x4_col_row.json  1_to_4x4_row_col.json  1_to_9.json
examples/kernels/vector/: mat2_mul.json  vec4_add.json  vec4_dot.json  vec4_sub.json
examples/schematic/: mat2_mul_mat2.json  mat2_transpose.json  mat3_mul_mat3.json  mat3_transpose.json
examples/source/: 1_to_2x2_col_row.eds  1_to_2x2_row_col.eds  1_to_3x3_col_row.eds  1_to_3x3_row_col.eds  1_to_4.eds  1_to_4x4_col_row.eds  1_to_4x4_row_col.eds  4_to_1.eds  9_to_1.eds  mat2_mul.eds  mat2_mul_new.eds  vec3_to_vec2.eds  vec4_add.eds  vec4_dot.eds  vec4_mul.eds  vec4_to_vec2.eds  vec4_to_vec3.eds
include/eddy/: eddy.h  program.h
include/edy/: edy.h  program.h
